--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-log = "0.4"
+log = { version = "0.4", features = ["release_max_level_warn"] }
 simple_logger = "5"
